--- a/ML.ipynb
+++ b/ML.ipynb
@@ -5,12 +5,33 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "hOhybhyn5QD6",
         "VHGjMWZk5YnB",
         "767s9ouN6A3T",
+        "mP4kGgu303Hu",
         "-QKu5wfU64H6",
         "0ompcyWQ77EY",
         "WzUeiQP6DGm5",
-        "zZqerrc0Ed4S"
+        "zZqerrc0Ed4S",
+        "Fq8tuNirEvda",
+        "btSdFOWSpDfk",
+        "HIY9jRe9rKyZ",
+        "58t4r3F-zxTC",
+        "ca677ebd",
+        "a8144917",
+        "0519a1e8",
+        "40325715",
+        "3bec0824",
+        "793dbb1a",
+        "ba8c309c",
+        "62518687",
+        "a11e64fd",
+        "3193c437",
+        "a9f37041",
+        "94eee0a7",
+        "4595a3ef",
+        "eb5c22d6",
+        "00352f8e"
       ],
       "authorship_tag": "ABX9TyOAKGlBVdovV/G/Jp5HuMcI",
       "include_colab_link": true
@@ -567,7 +588,7 @@
       "metadata": {
         "id": "HcpND-cqzkHm"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1162,7 @@
         "id": "bA7CHQwYpGOw",
         "outputId": "c348c78a-5fbc-49cd-b369-48c5f26ee340"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1196,7 +1217,7 @@
         "id": "lFcdFqPQrL2P",
         "outputId": "f2c37a3a-157d-4a85-9ff6-2e76ececd1c6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1255,7 +1276,7 @@
         "id": "phhu32d9z03O",
         "outputId": "f4aea23e-6607-46e5-cfc3-a73e51b298e8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1304,7 +1325,7 @@
         "# Display the first few rows of the DataFrame\n",
         "display(iris_df.head())"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1654,7 +1675,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1701,7 +1722,7 @@
         "# Ensure the plot is displayed\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1756,7 +1777,7 @@
         "# Display the plot\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1807,7 +1828,7 @@
         "# Display the plot\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1867,7 +1888,7 @@
         "# Display the plots\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1909,7 +1930,7 @@
         "# Display the plot\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1952,7 +1973,7 @@
         "# Display the plot\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1992,7 +2013,7 @@
         "# Display the plot\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2032,7 +2053,7 @@
         "# Display the plot\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2084,7 +2105,7 @@
         "# Display the heatmap\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2149,7 +2170,7 @@
         "plt.title('Distribution of Petal Width by Species')\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2236,7 +2257,7 @@
         "print(\"\\nFirst 5 rows of y:\")\n",
         "display(y.head())"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2663,7 +2684,7 @@
         "print(\"\\nFirst 5 rows of y_test:\")\n",
         "display(y_test[:5])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2806,7 +2827,7 @@
         "print(\"\\nFirst 5 rows of y_test:\")\n",
         "display(y_test.head())"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
